Login/registration commit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,27 +8,36 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:theme="@style/Theme.NavigationBar"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.FitnessBodybuilding"
         tools:targetApi="31">
         <activity
+            android:theme="@style/Theme.Login_Register.NoActionBar"
             android:name=".ui.RegistrationActivity"
-            android:exported="false" />
+            android:exported="true">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        </activity>
+
         <activity
+            android:theme="@style/Theme.NavigationBar.NoActionBar"
             android:name=".MainActivity"
-            android:exported="true"
-            android:theme="@style/Theme.FitnessBodybuilding.NoActionBar">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
-            android:name=".LoginActivity"
-            android:exported="true"
-            android:theme="@style/Base.Theme.Login_Register.NoActionBar">
+            android:theme="@style/Theme.Login_Register.NoActionBar"
+            android:name=".ui.LoginActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
