--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,29 +14,19 @@
         tools:targetApi="31">
         <activity
             android:theme="@style/Theme.Login_Register.NoActionBar"
-            android:name=".ui.RegistrationActivity"
+            android:name=".ui.ClassiEsecutive.RegistrationActivity"
             android:exported="true">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
         </activity>
 
         <activity
             android:theme="@style/Theme.NavigationBar.NoActionBar"
-            android:name=".MainActivity"
+            android:name=".ui.ClassiEsecutive.MenuActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
             android:theme="@style/Theme.Login_Register.NoActionBar"
-            android:name=".ui.LoginActivity"
+            android:name=".ui.ClassiEsecutive.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
