--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -11,22 +11,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.NavigationBar"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".ui.calendario.PaginaGiornaliera"
+            android:name=".ui.calendario.PaginaGiornalieraVisione"
+            android:exported="false" />
+        <activity
+            android:name=".ui.calendario.PaginaGiornalieraModifica"
             android:exported="false" />
         <activity
             android:name=".ui.ClassiEsecutive.RegistrationActivity"
             android:exported="true"
-            android:theme="@style/Theme.Login_Register.NoActionBar"></activity>
+            android:theme="@style/Theme.Login_Register.NoActionBar" />
         <activity
             android:name=".ui.ClassiEsecutive.MenuActivity"
             android:exported="true"
-            android:theme="@style/Theme.NavigationBar.NoActionBar"></activity>
+            android:theme="@style/Theme.NavigationBar.NoActionBar" />
         <activity
             android:name=".ui.ClassiEsecutive.LoginActivity"
             android:exported="true"
-            android:theme="@style/Theme.Login_Register.NoActionBar">
+            android:theme="@style/Theme.Login_Register.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
